Fix broken field wrapping in thread table.
Now using real tables for the thread table instead of fake flex tables.

PiperOrigin-RevId: 282479526

--- a/client/app/sidebar/thread_table/thread_table.css
+++ b/client/app/sidebar/thread_table/thread_table.css
@@ -34,13 +34,8 @@
   margin-left: 10px;
 }
 
-.mat-column-command {
-  flex: 0 0 120px;
-  padding-left: 10px;
-}
-
 .mat-column-selected {
-  flex: 0 0 36px;
+  max-width: 36px;
 }
 
 .timestamp {
@@ -57,36 +52,59 @@
 }
 
 .metric-cell {
-  justify-content: flex-end;
   padding-right: 10px;
+  text-align: right;
 }
 
-mat-cell:first-of-type {
+th ::ng-deep .mat-sort-header-container {
+  justify-content: flex-end;
+}
+
+.mat-column-selected, .mat-column-command, .mat-column-name {
+  text-align: left;
+}
+
+.mat-column-selected ::ng-deep .mat-sort-header-container,
+.mat-column-command ::ng-deep .mat-sort-header-container,
+.mat-column-name ::ng-deep .mat-sort-header-container {
+  justify-content: flex-start;
+}
+
+.mat-cell:first-of-type {
   padding-left: 10px;
 }
 
-mat-header-cell:first-of-type {
+.mat-header-cell:first-of-type {
   padding-left: 10px;
 }
 
-mat-header-cell:last-of-type {
-  padding-right: 0px;
+.mat-header-cell:last-of-type {
+  padding-right: 0;
 }
 
-mat-header-cell {
+.mat-header-cell {
   line-height: 12pt;
 }
 
-mat-cell {
+.mat-cell {
   font-size: 12px;
 }
 
-mat-cell:last-of-type {
+.mat-cell:last-of-type {
   padding-right: 10px;
+}
+
+.expanded-row, .expanded-row td {
+  border-bottom: none;
 }
 
 .detail-row {
   min-height: 0;
+  height: auto;
+}
+
+:not(.expanded-row) + .detail-row, :not(.expanded-row) + .detail-row td {
+  border: none;
 }
 
 .selectable-row {
